# USAS-CSV-Auto-Labeling

./: .gitignore  README.md  download_tagger_resources.py  download_usas_hybrid_tagger_resources.py  makefile  models_install.py  pyproject.toml  tag_data_to_excel.py  taggers.py
src/usas_csv_auto_labeling/: __init__.py  data_utils.py  processing_text.py
tests/: test_data_utils.py  test_processing_text.py  test_version.py
